--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     <header class="header">
       <div class="header__container">
         <a href="#" class="header__logo">
-          <img src="/pictures/header/logo.png">
+          <img src="./pictures/header/logo.png">
         </a>
+        <div class="header__burger">
+          <span></span>
+        </div>
         <nav class="header__menu menu">
           <ul class="menu__list">
             <li class="menu__item">
@@ -35,10 +38,10 @@
               </a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="#">About pages <img src="/pictures/header/Vector.png"></a>
+              <a class="menu__link" href="#">About pages <img src="./pictures/header/Vector.png"></a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="#">Others <img src="/pictures/header/Vector.png"></a>
+              <a class="menu__link" href="#">Others <img src="./pictures/header/Vector.png"></a>
             </li>
             <li class="menu__item menu__item_four">
               <a class="menu__link" href="#">Blog</a>
@@ -48,7 +51,7 @@
             </li>
             <li class="menu__item menu__item_six">
               <a class="menu__link" href="#">
-                <img src="/pictures/header/header-border.png" width="38px" height="1px"></a>
+                <img src="./pictures/header/header-border.png" width="38px" height="1px"></a>
             </li>
           </ul>
         </nav>
@@ -67,13 +70,61 @@
             Explorer pages</a>
         </div>
       </div>
-      <div class="page__section">
+      <div class="page__image">
+        <img src="./pictures/body/page-image.png">
+      </div>
+      <div class="page__about about">
+        <div class="about__header header-about">
+          <div class="header-about__image">
+            <img src="./pictures/body/header-about.jpg">
+          </div>
+          <div class="header-about__text text-block">
+            <div class="text-block__one">
+              <h1>Couple of quick facts</h1>
+              <p>
+                We want to make sure you understand the power you have in your hands when deciding to use our template.
+              </p>
+            </div>
+            <div class="text-block__two block-two">
+              <div class="block-two__header">OUR Template:</div>
+              <div class="block-two__body">
+                <p class="block-two__first">
+                  is fully responsive and ready to go live
+                </p>
+                <p class="block-two__second">
+                  has 3 unique homepages, 3 about pages, blog pages, and 4 other useful pages. This adds up to 40+
+                  custom sections!
+                </p>
+                <p class="block-two__third">
+                  includes CMS (Content Management System) so you can easily edit dynamic content.
+                </p>
+                <p class="block-two__four">
+                  is modular which means that you can combine different sections or parts of theUser Interface and the
+                  feel and look will stay the same
+                </p>
+                <p class="block-two__five">
+                  was crafted with love and attention to detail by awarded designer
+                </p>
+              </div>             
+            </div>
+            <button class="header-about__button">
+              <a class="header-about__click" href="#">
+                Buy template</a>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="about__body">
 
       </div>
-    </main>
-    <footer class="footer">
+      <div class="about__footer">
 
-    </footer>
+      </div>
+  </div>
+  </main>
+  <footer class="footer">
+
+  </footer>
   </div>
 </body>
 
