--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
           <div class="header-about__text text-block">
             <div class="text-block__one">
-              <h1>Couple of quick facts</h1>
+              <h2>Couple of quick facts</h2>
               <p>
                 We want to make sure you understand the power you have in your hands when deciding to use our template.
               </p>
@@ -105,11 +105,12 @@
                 <p class="block-two__five">
                   was crafted with love and attention to detail by awarded designer
                 </p>
-              </div>             
+              </div>
             </div>
             <button class="header-about__button">
               <a class="header-about__click" href="#">
-                Buy template</a>
+                Buy template
+              </a>
             </button>
           </div>
         </div>
@@ -120,12 +121,13 @@
       <div class="about__footer">
 
       </div>
+
   </div>
   </main>
   <footer class="footer">
 
   </footer>
-  </div>
+
 </body>
 
 </html>
