--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
   <div class="wrapper">
+    <div class="container">
     <header class="header">
       <div class="header__container">
         <a href="#" class="header__logo">
@@ -122,12 +123,13 @@
 
       </div>
 
+
+    </main>
+    <footer class="footer">
+
+    </footer>
   </div>
-  </main>
-  <footer class="footer">
-
-  </footer>
-
+</div>
 </body>
 
 </html>
