--- a/index.html
+++ b/index.html
@@ -17,119 +17,158 @@
 <body>
   <div class="wrapper">
     <div class="container">
-    <header class="header">
-      <div class="header__container">
-        <a href="#" class="header__logo">
-          <img src="./pictures/header/logo.png">
-        </a>
-        <div class="header__burger">
-          <span></span>
-        </div>
-        <nav class="header__menu menu">
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a class="menu__link" href="#">Homepages
-                <span>
-                  <svg width="12" height="8" viewbox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M6 5.07452L10.5375 0.536989L11.8337 1.83316L6 7.66685L0.166321 1.83316L1.46249 0.536989L6 5.07452Z"
-                      fill="#333333" />
-                  </svg>
-                </span>
-              </a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="#">About pages <img src="./pictures/header/Vector.png"></a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="#">Others <img src="./pictures/header/Vector.png"></a>
-            </li>
-            <li class="menu__item menu__item_four">
-              <a class="menu__link" href="#">Blog</a>
-            </li>
-            <li class="menu__item menu__item_five">
-              <a class="menu__link" href="#">Get on webflow</a>
-            </li>
-            <li class="menu__item menu__item_six">
-              <a class="menu__link" href="#">
-                <img src="./pictures/header/header-border.png" width="38px" height="1px"></a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main class="page">
-      <div class="page__container">
-        <div class="text text">
-          <div class="text__text">
-            Minimalistic, modular Webflow template.</div>
-          <div class="text__description">
-            Moon Coach is a beautiful, custom, and animated Webflow template focused on coaching, courses, and other
-            service-based businesses.
+      <header class="header">
+        <div class="header__container">
+          <a href="#" class="header__logo">
+            <img src="./pictures/header/logo.png">
+          </a>
+          <div class="header__burger">
+            <span></span>
           </div>
-          <a class="text__explorer" href="#">
-            Explorer pages</a>
+          <nav class="header__menu menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a class="menu__link" href="#">Homepages
+                  <span>
+                    <svg width="12" height="8" viewbox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M6 5.07452L10.5375 0.536989L11.8337 1.83316L6 7.66685L0.166321 1.83316L1.46249 0.536989L6 5.07452Z"
+                        fill="#333333" />
+                    </svg>
+                  </span>
+                </a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">About pages <img src="./pictures/header/Vector.png"></a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Others <img src="./pictures/header/Vector.png"></a>
+              </li>
+              <li class="menu__item menu__item_four">
+                <a class="menu__link" href="#">Blog</a>
+              </li>
+              <li class="menu__item menu__item_five">
+                <a class="menu__link" href="#">Get on webflow</a>
+              </li>
+              <li class="menu__item menu__item_six">
+                <a class="menu__link" href="#">
+                  <img src="./pictures/header/header-border.png" width="38px" height="1px"></a>
+              </li>
+            </ul>
+          </nav>
         </div>
-      </div>
-      <div class="page__image">
-        <img src="./pictures/body/page-image.png">
-      </div>
-      <div class="page__about about">
-        <div class="about__header header-about">
-          <div class="header-about__image">
-            <img src="./pictures/body/header-about.jpg">
-          </div>
-          <div class="header-about__text text-block">
-            <div class="text-block__one">
-              <h2>Couple of quick facts</h2>
-              <p>
-                We want to make sure you understand the power you have in your hands when deciding to use our template.
-              </p>
+      </header>
+      <main class="page">
+        <div class="page__container">
+          <div class="text text">
+            <div class="text__text">
+              Minimalistic, modular Webflow template.</div>
+            <div class="text__description">
+              Moon Coach is a beautiful, custom, and animated Webflow template focused on coaching, courses, and other
+              service-based businesses.
             </div>
-            <div class="text-block__two block-two">
-              <div class="block-two__header">OUR Template:</div>
-              <div class="block-two__body">
-                <p class="block-two__first">
-                  is fully responsive and ready to go live
-                </p>
-                <p class="block-two__second">
-                  has 3 unique homepages, 3 about pages, blog pages, and 4 other useful pages. This adds up to 40+
-                  custom sections!
-                </p>
-                <p class="block-two__third">
-                  includes CMS (Content Management System) so you can easily edit dynamic content.
-                </p>
-                <p class="block-two__four">
-                  is modular which means that you can combine different sections or parts of theUser Interface and the
-                  feel and look will stay the same
-                </p>
-                <p class="block-two__five">
-                  was crafted with love and attention to detail by awarded designer
-                </p>
+            <a class="text__explorer" href="#">
+              Explorer pages</a>
+          </div>
+        </div>
+        <div class="page__image">
+          <img src="./pictures/body/page-image.png">
+        </div>
+        <div class="page__about about">
+          <div class="about__container">
+            <div class="about__header header-about">
+              <div class="header-about__image">
+                <img src="./pictures/body/header-about.jpg">
+              </div>
+              <div class="header-about__text text-block">
+                <div class="text-block__bigfont">
+                  <h2>Couple of quick facts</h2>
+                  <p>
+                    We want to make sure you understand the power you have in your hands when deciding to use our
+                    template.
+                  </p>
+                </div>
+                <div class="text-block__two block-two">
+                  <div class="block-two__header">OUR Template:</div>
+                  <div class="block-two__body">
+                    <p class="block-two__first">
+                      is fully responsive and ready to go live
+                    </p>
+                    <p class="block-two__second">
+                      has 3 unique homepages, 3 about pages, blog pages, and 4 other useful pages. This adds up to 40+
+                      custom sections!
+                    </p>
+                    <p class="block-two__third">
+                      includes CMS (Content Management System) so you can easily edit dynamic content.
+                    </p>
+                    <p class="block-two__four">
+                      is modular which means that you can combine different sections or parts of theUser Interface and
+                      the
+                      feel and look will stay the same
+                    </p>
+                    <p class="block-two__five">
+                      was crafted with love and attention to detail by awarded designer
+                    </p>
+                  </div>
+                </div>
+                <button class="header-about__button">
+                  <a class="header-about__click" href="#">
+                    Buy template
+                  </a>
+                </button>
               </div>
             </div>
-            <button class="header-about__button">
-              <a class="header-about__click" href="#">
-                Buy template
-              </a>
-            </button>
+            <div class="about__body body-about">
+              <div class="body-about__bigfont">
+                <h2>Homepages</h2>
+                <p>The homepage is the face of your business. Select one from three minimalistic and subtly animated
+                  homepages, to introduce your users to what you're doing.</p>
+              </div>
+              <div class="body-about__images image-body">
+                <div class="image-body__section">
+                  <div class="image-body__one one-image">
+                    <div class="one-image__image">
+                      <img src="./pictures/body/body-about1.png">
+                    </div>
+                    <div class="one-image__text">
+                      Home Version 1
+                    </div>
+                  </div>
+                  <div class="image-body__one one-image">
+                    <div class="one-image__image">
+                      <img src="./pictures/body/body-about2.png">
+                    </div>
+                    <div class="one-image__text">
+                      Home Version 2
+                    </div>
+                  </div>
+                  <div class="image-body__one one-image">
+                    <div class="one-image__image">
+                      <img src="./pictures/body/body-about3.png">
+                    </div>
+                    <div class="one-image__text">
+                      Home Version 3
+                    </div>
+                  </div>
+                </div>
+
+
+              </div>
+            </div>
+            <div class="about__footer">
+
+            </div>
           </div>
         </div>
-      </div>
-      <div class="about__body">
-
-      </div>
-      <div class="about__footer">
-
-      </div>
 
 
-    </main>
-    <footer class="footer">
 
-    </footer>
+      </main>
+      <footer class="footer">
+
+      </footer>
+    </div>
   </div>
-</div>
 </body>
 
 </html>
