--- a/index.html
+++ b/index.html
@@ -118,43 +118,168 @@
                 </button>
               </div>
             </div>
-            <div class="about__body body-about">
-              <div class="body-about__bigfont">
-                <h2>Homepages</h2>
-                <p>The homepage is the face of your business. Select one from three minimalistic and subtly animated
-                  homepages, to introduce your users to what you're doing.</p>
-              </div>
-              <div class="body-about__images image-body">
-                <div class="image-body__section">
-                  <div class="image-body__one one-image">
-                    <div class="one-image__image">
-                      <img src="./pictures/body/body-about1.png">
+            <section class="portfolio">
+              <div class="portfolio__homepages">
+                <div class="portfolio__bigfont">
+                  <h2>Homepages</h2>
+                  <p>The homepage is the face of your business. Select one from three minimalistic and subtly animated
+                    homepages, to introduce your users to what you're doing.</p>
+                </div>
+                <div class="portfolio__block">
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/port-hom1.png">
                     </div>
-                    <div class="one-image__text">
+                    <div class="portfolio__text">
                       Home Version 1
                     </div>
                   </div>
-                  <div class="image-body__one one-image">
-                    <div class="one-image__image">
-                      <img src="./pictures/body/body-about2.png">
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/port-hom2.png">
                     </div>
-                    <div class="one-image__text">
+                    <div class="portfolio__text">
                       Home Version 2
                     </div>
                   </div>
-                  <div class="image-body__one one-image">
-                    <div class="one-image__image">
-                      <img src="./pictures/body/body-about3.png">
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/port-hom3.png">
                     </div>
-                    <div class="one-image__text">
+                    <div class="portfolio__text">
                       Home Version 3
                     </div>
                   </div>
                 </div>
-
-
               </div>
-            </div>
+
+              <div class="portfolio__about">
+                <div class="portfolio__bigfont">
+                  <h2>About pages</h2>
+                  <p>If you didn't get enough space on the homepage to really deep dive into who you are, your story,
+                    and yourvalues, you can do that on a separate about page.</p>
+                </div>
+                <div class="portfolio__block">
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/portf-about1.png">
+                    </div>
+                    <div class="portfolio__text">
+                      About Version 1
+                    </div>
+                  </div>
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/portf-about2.png">
+                    </div>
+                    <div class="portfolio__text">
+                      About Version 2
+                    </div>
+                  </div>
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/portf-about3.png">
+                    </div>
+                    <div class="portfolio__text">
+                      About Version 3
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="portfolio__blog">
+                <div class="portfolio__bigfont">
+                  <h2>Blog pages (CMS)</h2>
+                  <p>Share your knowledge in the easiest way possible, thanks to Webflow CMS and our clean structure.
+                  </p>
+                </div>
+                <div class="portfolio__block">
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/portf-blog1.png">
+                    </div>
+                    <div class="portfolio__text">
+                      Blog Overview
+                    </div>
+                  </div>
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/portf-blog2.png">
+                    </div>
+                    <div class="portfolio__text">
+                      Blog Category
+                    </div>
+                  </div>
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/portf-blog3.png">
+                    </div>
+                    <div class="portfolio__text">
+                      Blog Detailed
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="portfolio__other">
+                <div class="portfolio__bigfont">
+                  <h2>Other useful pages</h2>
+                  <p>Complete your website with other pages.</p>
+                </div>
+                <div class="portfolio__block">
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/port-other1.png">
+                    </div>
+                    <div class="portfolio__text">
+                      Contact 1
+                    </div>
+                  </div>
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/port-other2.png">
+                    </div>
+                    <div class="portfolio__text">
+                      Contact 2
+                    </div>
+                  </div>
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/port-other3.png">
+                    </div>
+                    <div class="portfolio__text">
+                      Contact 3
+                    </div>
+                  </div>
+                </div>
+                <div class="portfolio__block">
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/port-other4.png">
+                    </div>
+                    <div class="portfolio__text">
+                      Pricing
+                    </div>
+                  </div>
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/port-other5.png">
+                    </div>
+                    <div class="portfolio__text">
+                      Legal
+                    </div>
+                  </div>
+                  <div class="portfolio__item">
+                    <div class="portfolio__image">
+                      <img src="./pictures/body/port-other6.png">
+                    </div>
+                    <div class="portfolio__text">
+                      404
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
             <div class="about__footer">
 
             </div>
