--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           </nav>
         </div>
       </header>
+
       <main class="page">
         <div class="page__container">
           <div class="text text">
@@ -71,9 +72,11 @@
               Explorer pages</a>
           </div>
         </div>
+
         <div class="page__image">
           <img src="./pictures/body/page-image.png">
         </div>
+
         <div class="page__about about">
           <div class="about__container">
             <div class="about__header header-about">
@@ -118,6 +121,7 @@
                 </button>
               </div>
             </div>
+
             <section class="portfolio">
               <div class="portfolio__homepages">
                 <div class="portfolio__bigfont">
@@ -226,7 +230,7 @@
                   <h2>Other useful pages</h2>
                   <p>Complete your website with other pages.</p>
                 </div>
-                <div class="portfolio__block">
+                <div class="portfolio__block last">
                   <div class="portfolio__item">
                     <div class="portfolio__image">
                       <img src="./pictures/body/port-other1.png">
@@ -252,7 +256,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="portfolio__block">
+                <div class="portfolio__block last">
                   <div class="portfolio__item">
                     <div class="portfolio__image">
                       <img src="./pictures/body/port-other4.png">
@@ -280,9 +284,38 @@
                 </div>
               </div>
             </section>
-            <div class="about__footer">
 
+            <div class="about__footer footer-about">
+              <div class="footer-about__section">
+                <div class="footer-about__image image-footer">
+                  <div class="image-footer__image">
+                    <img src="./pictures/body/footer.png">
+                  </div>
+                  <div class="image-footer__text">
+                    <p>We are driven by honesty, motivation and hard work. That's why we are always here for you.</p>
+                    <span>Mike from Wavesdesign</span>
+                  </div>
+                </div>
+
+                <div class="footer-about__form">
+                  <form action="#" method="post">
+                    <fieldset>
+                      <legend>Have question about our template?</legend>
+                    </fieldset>
+                    <ul class="footer-about__input">
+                      <li><input type="text" name="name" value="" placeholder="Your name"></li>
+                      <li><input type="email" name="email" value="" placeholder="Email"></li>
+                      <li><input type="text" name="message" value="" placeholder="Your message"></li>
+
+                      <a href="#" class="button"><button type="submit">Send Form</button> </a>
+                    </ul>
+                  </form>
+                </div>
+
+              </div>
             </div>
+
+
           </div>
         </div>
 
