--- a/index.html
+++ b/index.html
@@ -286,20 +286,19 @@
 
           <div class="about__footer footer-about">
             <div class="footer-about__section">
-              <div class="footer-about__image image-footer">
-                <div class="image-footer__image">
+              <div class="footer-about__collapse">
+              <div class="footer-about__image">
                   <img src="./pictures/body/footer.png">
-                </div>
-                <div class="image-footer__text">
-                  <p>We are driven by honesty, motivation and hard work. That's why we are always here for you.</p>
-                  <span>Mike from Wavesdesign</span>
-                </div>
               </div>
-
+              <div class="footer-about__text">
+                <p>We are driven by honesty, motivation and hard work. That's why we are always here for you.</p>
+                <span>Mike from Wavesdesign</span>
+              </div>
+              </div>
               <div class="footer-about__form">
                 <form action="#" method="post">
                   <fieldset>
-                    <legend>Have question about our template?</legend>
+                    <legend class="footer-about__bigfont"><h2>Have question about our template?</h2></legend>
                   </fieldset>
                   <ul class="footer-about__input">
                     <li><input type="text" name="name" value="" placeholder="Your name"></li>
@@ -314,9 +313,8 @@
             </div>
           </div>
 
-
         </div>
-      </div>
+
 
 
 
