--- a/index.html
+++ b/index.html
@@ -286,16 +286,13 @@
 
           <div class="about__footer footer-about">
             <div class="footer-about__section">
-              
-                <div class="footer-about__image">
-                  <img src="./pictures/body/footer.png">
-
-                  <div class="footer-about__text">
-                    <p>We are driven by honesty, motivation and hard work. That's why we are always here for you.</p>
-                    <span>Mike from Wavesdesign</span>
-                  </div>
+              <div class="footer-about__image">
+                <img src="./pictures/body/footer.png">
+                <div class="footer-about__text">
+                  <p>We are driven by honesty, motivation and hard work. That's why we are always here for you.</p>
+                  <span>Mike from Wavesdesign</span>
                 </div>
-              
+              </div>
               <div class="footer-about__form">
                 <form action="#" method="post">
                   <fieldset>
@@ -307,23 +304,21 @@
                     <li><input type="text" name="name" value="" placeholder="Your name"></li>
                     <li><input type="email" name="email" value="" placeholder="Email"></li>
                     <li><input type="textarea" name="message" value="" placeholder="Your message"></li>
-
                     <button type="submit">Send Form</button>
                   </ul>
                 </form>
               </div>
-
             </div>
           </div>
-
         </div>
-
-
-
-
+      </div>
     </main>
     <footer class="footer">
-
+      <div class="footer__container">
+        <a href="#" class="header__logo">
+          <img src="./pictures/header/logo.png">
+        </a>
+      </div>
     </footer>
   </div>
 
