--- a/index.html
+++ b/index.html
@@ -415,6 +415,19 @@
               <li>404</li>
             </ul>
           </div>
+          <nav class="footer__mobile mobile">
+            <ul class="mobile__menu">
+              <li><a class="mobile__link" href="#">Homepages</a>
+
+                <ul class="mobile__menu-sub">
+                  <li><a class="mobile__link-sub" href="#">Home V1</a> </li>
+                  <li><a class="mobile__link-sub" href="#">Home V2</a></li>
+                  <li><a class="mobile__link-sub" href="#">Home V3</a></li>
+                </ul>
+              </li>
+              
+            </ul>
+          </nav>
         </div>
         <div class="footer__row_end">
           <div class="footer__end">Powered by <img src="./pictures/footer/end.png"> designed and developed by <a
