--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                   </svg>
                 </span>
               </a>
+              <ul class="sub-menu__item">
+                <li><a class="sub-menu__link" href="#">Home V1</a> </li>
+                <li><a class="sub-menu__link" href="#">Home V2</a></li>
+                <li><a class="sub-menu__link" href="#">Home V3</a></li>
+              </ul>
             </li>
             <li class="menu__item">
               <a class="menu__link" href="#">About pages <img src="./pictures/header/Vector.png"></a>
@@ -418,14 +423,44 @@
           <nav class="footer__mobile mobile">
             <ul class="mobile__menu">
               <li><a class="mobile__link" href="#">Homepages</a>
-
+                <span class="mobile__arrow arrow"></span>
                 <ul class="mobile__menu-sub">
                   <li><a class="mobile__link-sub" href="#">Home V1</a> </li>
                   <li><a class="mobile__link-sub" href="#">Home V2</a></li>
                   <li><a class="mobile__link-sub" href="#">Home V3</a></li>
                 </ul>
               </li>
-              
+              <li><a class="mobile__link" href="#">About</a>
+                <span class="mobile__arrow arrow"></span>
+                <ul class="mobile__menu-sub">
+                  <li><a class="mobile__link-sub" href="#">About V1</a> </li>
+                  <li><a class="mobile__link-sub" href="#">About V2</a></li>
+                  <li><a class="mobile__link-sub" href="#">About V3</a></li>
+                </ul>
+              </li>
+              <li><a class="mobile__link" href="#">Blog</a>
+                <span class="mobile__arrow arrow"></span>
+                <ul class="mobile__menu-sub">
+                  <li><a class="mobile__link-sub" href="#">Overview/a> </li>
+                  <li><a class="mobile__link-sub" href="#">Category/a></li>
+                  <li><a class="mobile__link-sub" href="#">Detailed</a></li>
+                </ul>
+              </li>
+              <li><a class="mobile__link" href="#">Others</a>
+
+                <span class="mobile__arrow arrow"></span>
+                <ul class="mobile__menu-sub">
+                  <li><a class="mobile__link-sub" href="#">Contact V1</a> </li>
+                  <li><a class="mobile__link-sub" href="#">Contact V2</a></li>
+                  <li><a class="mobile__link-sub" href="#">Contact V3</a></li>
+                  <li><a class="mobile__link-sub" href="#">Pricing</a> </li>
+                  <li><a class="mobile__link-sub" href="#">Style Guide</a></li>
+                  <li><a class="mobile__link-sub" href="#">Licensing</a></li>
+                  <li><a class="mobile__link-sub" href="#">Changelog</a> </li>
+                  <li><a class="mobile__link-sub" href="#">Legal</a></li>
+                  <li><a class="mobile__link-sub" href="#">404</a></li>
+                </ul>
+              </li>
             </ul>
           </nav>
         </div>
