--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
               <li><a class="mobile__link" href="#">Blog</a>
                 <span class="mobile__arrow arrow"></span>
                 <ul class="mobile__menu-sub">
-                  <li><a class="mobile__link-sub" href="#">Overview/a> </li>
-                  <li><a class="mobile__link-sub" href="#">Category/a></li>
+                  <li><a class="mobile__link-sub" href="#">Overview</a></li>
+                  <li><a class="mobile__link-sub" href="#">Category</a></li>
                   <li><a class="mobile__link-sub" href="#">Detailed</a></li>
                 </ul>
               </li>
@@ -471,7 +471,7 @@
       </div>
     </footer>
   </div>
-
+  <script src="./script.js"></script>
 </body>
 
 </html>
